--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-<h1>titolo</h1>
+<!DOCTYPE html>
+<html lang="it" dir="ltr">
+  <head>
+    <title>Titolo</title>
+    <style media="screen">
+
+      header {
+        background-color: red;
+        color: white;
+      }
+
+    </style>
+  </head>
+  <body>
+    <header>
+<span>Home</span> <span>Negozio</span>
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
+
+  </body>
+</html>
